fix spacing

--- a/vite-react-electron/src/assets/css/Button.css
+++ b/vite-react-electron/src/assets/css/Button.css
@@ -170,6 +170,8 @@ button:disabled:hover {
     transition: 0.3s;
     margin: 0px;
     line-height: 8px;
+    display: flex;
+    align-items: center;
 }
 
 .create-button-backnext:hover {
