--- a/vite-react-electron/src/assets/css/ProjectInfo.css
+++ b/vite-react-electron/src/assets/css/ProjectInfo.css
@@ -48,7 +48,7 @@
     outline: 1px var(--gray-opa2);
     font-size: 16px;
     border-radius: 4px;
-    width: 520px;
+    width: 32.5rem;
     height: 100px;
     padding: 8px;
     margin: 0px;
